--- a/SampleDB_tl_branch/app/build.gradle
+++ b/SampleDB_tl_branch/app/build.gradle
@@ -42,6 +42,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation files('libs/CredenceIDDeviceSDK.jar')
+    implementation files('libs/opencsv-5.2.jar')
 
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
